--- a/Image Stream Using Real Time Protocol -C.ipynb
+++ b/Image Stream Using Real Time Protocol -C.ipynb
@@ -2,9 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are now logged in\n",
+      "Connection established, sent message to server\n",
+      "File location : C:/Users/hanis/Downloads/Hackillinois Selection Mail.jpeg\n",
+      "File Type : jpeg\n",
+      "Encoded Byte Data : \n",
+      "Length of Data : 55922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-17-4959d4d104db>:24: DeprecationWarning: tostring() is deprecated. Use tobytes() instead.\n",
+      "  data=data_encode.tostring()\n"
+     ]
+    }
+   ],
    "source": [
     "import socket\n",
     "import sys\n",
@@ -26,11 +47,11 @@
     "    print(\"File Type : \"+extension[1])\n",
     "    img=cv2.imread (filepath)\n",
     "    img_encode=cv2.imencode (\".\"+extension[1], img)[1]\n",
-    "    print(\"Encoded Byte Data : \")\n",
-    "    #print(img_encode.tobytes())\n",
     "    data_encode=np.array (img_encode)\n",
     "    data=data_encode.tostring()\n",
     "    print(\"Length of Data : \"+ str(len(data)))\n",
+    "    print(\"Encoded Byte Data : \")\n",
+    "    print(img_encode.tobytes())\n",
     "    #Defining file headers,Packaging into a structure\n",
     "    \n",
     "    fhead=struct.pack (\"l\", len (data))\n",
@@ -75,6 +96,20 @@
     "tk.Button(text=\"Login\",command=submit_login).grid(row=4, column=3,pady=20)\n",
     "window.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
