--- a/Image Stream Using Real Time Protocol -S.ipynb
+++ b/Image Stream Using Real Time Protocol -S.ipynb
@@ -2,13 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are now logged in\n",
+      "UDP server up and listening\n",
+      "\n",
+      "Client connection established\n",
+      "Total size of message received through buffer till this stream 1024 (size 1024)\n",
+      "Total size of message received through buffer till this stream 2048 (size 1024)\n",
+      "Total size of message received through buffer till this stream 3072 (size 1024)\n",
+      "Total size of message received through buffer till this stream 4096 (size 1024)\n",
+      "Total size of message received through buffer till this stream 5120 (size 1024)\n",
+      "Total size of message received through buffer till this stream 6144 (size 1024)\n",
+      "Total size of message received through buffer till this stream 7168 (size 1024)\n",
+      "Total size of message received through buffer till this stream 8192 (size 1024)\n",
+      "Total size of message received through buffer till this stream 9216 (size 1024)\n",
+      "Total size of message received through buffer till this stream 10240 (size 1024)\n",
+      "Total size of message received through buffer till this stream 11264 (size 1024)\n",
+      "Total size of message received through buffer till this stream 12288 (size 1024)\n",
+      "Total size of message received through buffer till this stream 13312 (size 1024)\n",
+      "Total size of message received through buffer till this stream 14336 (size 1024)\n",
+      "Total size of message received through buffer till this stream 15360 (size 1024)\n",
+      "Total size of message received through buffer till this stream 16384 (size 1024)\n",
+      "Total size of message received through buffer till this stream 17408 (size 1024)\n",
+      "Total size of message received through buffer till this stream 18432 (size 1024)\n",
+      "Total size of message received through buffer till this stream 19456 (size 1024)\n",
+      "Total size of message received through buffer till this stream 20480 (size 1024)\n",
+      "Total size of message received through buffer till this stream 21504 (size 1024)\n",
+      "Total size of message received through buffer till this stream 22528 (size 1024)\n",
+      "Total size of message received through buffer till this stream 23552 (size 1024)\n",
+      "Total size of message received through buffer till this stream 24576 (size 1024)\n",
+      "Total size of message received through buffer till this stream 25600 (size 1024)\n",
+      "Total size of message received through buffer till this stream 26624 (size 1024)\n",
+      "Total size of message received through buffer till this stream 27648 (size 1024)\n",
+      "Total size of message received through buffer till this stream 28672 (size 1024)\n",
+      "Total size of message received through buffer till this stream 29696 (size 1024)\n",
+      "Total size of message received through buffer till this stream 30720 (size 1024)\n",
+      "Total size of message received through buffer till this stream 31744 (size 1024)\n",
+      "Total size of message received through buffer till this stream 32768 (size 1024)\n",
+      "Total size of message received through buffer till this stream 33792 (size 1024)\n",
+      "Total size of message received through buffer till this stream 34816 (size 1024)\n",
+      "Total size of message received through buffer till this stream 35840 (size 1024)\n",
+      "Total size of message received through buffer till this stream 36864 (size 1024)\n",
+      "Total size of message received through buffer till this stream 37888 (size 1024)\n",
+      "Total size of message received through buffer till this stream 38912 (size 1024)\n",
+      "Total size of message received through buffer till this stream 39936 (size 1024)\n",
+      "Total size of message received through buffer till this stream 40960 (size 1024)\n",
+      "Total size of message received through buffer till this stream 41984 (size 1024)\n",
+      "Total size of message received through buffer till this stream 43008 (size 1024)\n",
+      "Total size of message received through buffer till this stream 44032 (size 1024)\n",
+      "Total size of message received through buffer till this stream 45056 (size 1024)\n",
+      "Total size of message received through buffer till this stream 46080 (size 1024)\n",
+      "Total size of message received through buffer till this stream 47104 (size 1024)\n",
+      "Total size of message received through buffer till this stream 48128 (size 1024)\n",
+      "Total size of message received through buffer till this stream 49152 (size 1024)\n",
+      "Total size of message received through buffer till this stream 50176 (size 1024)\n",
+      "Total size of message received through buffer till this stream 51200 (size 1024)\n",
+      "Total size of message received through buffer till this stream 52224 (size 1024)\n",
+      "Total size of message received through buffer till this stream 53248 (size 1024)\n",
+      "Total size of message received through buffer till this stream 54272 (size 1024)\n",
+      "Total size of message received through buffer till this stream 55296 (size 1024)\n",
+      "Total size of message received through buffer till this stream 55922(size 626)\n",
+      "Image received\n",
+      "\n",
+      "Total No of messages / packets received: 56\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-494c7cd7f39e>:54: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
+      "  nparr=np.fromstring (data_total, np.uint8)\n"
+     ]
+    }
+   ],
    "source": [
     "import socket\n",
     "import sys\n",
+    "import cv2\n",
     "import tkinter as tk\n",
+    "import numpy as np\n",
     "import struct\n",
     "window = tk.Tk()\n",
     "window.geometry(\"250x200\")\n",
@@ -34,6 +113,7 @@
     "        connection,addr = UDPServerSocket.recvfrom(1024)\n",
     "        print(\"\\n\"+connection.decode())\n",
     "        # Receive file header,The length of the file header\n",
+    "        count=1\n",
     "        while True : \n",
     "            fhead_size=struct.calcsize (\"l\")\n",
     "            buf, addr=UDPServerSocket.recvfrom (fhead_size)\n",
@@ -43,15 +123,26 @@
     "                #receive size and data\n",
     "                recv_size=0\n",
     "                data_total=b\"\"\n",
+    "                \n",
     "                while not recv_size ==data_size:\n",
     "                    if data_size - recv_size>1024:\n",
     "                        data,addr=UDPServerSocket.recvfrom(1024)\n",
     "                        recv_size+=len(data)\n",
+    "                        print(\"\\nTotal size of message received through buffer till this stream \"+str(recv_size)+\" (size 1024)\")\n",
+    "                        count=count+1\n",
     "                    else:\n",
     "                        data,addr=UDPServerSocket.recvfrom(1024)\n",
     "                        recv_size=data_size\n",
     "                        data_total+=data\n",
-    "                        print(\"Image received\")\n",
+    "                        print(\"\\nTotal size of message received through buffer till this stream \"+str(recv_size)+\" (size \"+str(len(data))+\")\")\n",
+    "                        print(\"\\nImage received\")\n",
+    "                        nparr=np.fromstring (data_total, np.uint8)\n",
+    "                        img_decode=cv2.imdecode (nparr,cv2.IMREAD_COLOR)\n",
+    "                        count=count+1\n",
+    "                    \n",
+    "                break\n",
+    "        print(\"\\nTotal No of messages / packets received: \"+str(count))\n",
+    "          \n",
     "                    \n",
     "    else:\n",
     "        print(\"Error\")\n",
@@ -63,6 +154,20 @@
     "tk.Button(text=\"Login\",command=submit_login).grid(row=4, column=3,pady=20)\n",
     "window.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
