--- a/Image Stream Using Real Time Protocol -S.ipynb
+++ b/Image Stream Using Real Time Protocol -S.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -13,72 +13,134 @@
       "UDP server up and listening\n",
       "\n",
       "Client connection established\n",
-      "Total size of message received through buffer till this stream 1024 (size 1024)\n",
-      "Total size of message received through buffer till this stream 2048 (size 1024)\n",
-      "Total size of message received through buffer till this stream 3072 (size 1024)\n",
-      "Total size of message received through buffer till this stream 4096 (size 1024)\n",
-      "Total size of message received through buffer till this stream 5120 (size 1024)\n",
-      "Total size of message received through buffer till this stream 6144 (size 1024)\n",
-      "Total size of message received through buffer till this stream 7168 (size 1024)\n",
-      "Total size of message received through buffer till this stream 8192 (size 1024)\n",
-      "Total size of message received through buffer till this stream 9216 (size 1024)\n",
-      "Total size of message received through buffer till this stream 10240 (size 1024)\n",
-      "Total size of message received through buffer till this stream 11264 (size 1024)\n",
-      "Total size of message received through buffer till this stream 12288 (size 1024)\n",
-      "Total size of message received through buffer till this stream 13312 (size 1024)\n",
-      "Total size of message received through buffer till this stream 14336 (size 1024)\n",
-      "Total size of message received through buffer till this stream 15360 (size 1024)\n",
-      "Total size of message received through buffer till this stream 16384 (size 1024)\n",
-      "Total size of message received through buffer till this stream 17408 (size 1024)\n",
-      "Total size of message received through buffer till this stream 18432 (size 1024)\n",
-      "Total size of message received through buffer till this stream 19456 (size 1024)\n",
-      "Total size of message received through buffer till this stream 20480 (size 1024)\n",
-      "Total size of message received through buffer till this stream 21504 (size 1024)\n",
-      "Total size of message received through buffer till this stream 22528 (size 1024)\n",
-      "Total size of message received through buffer till this stream 23552 (size 1024)\n",
-      "Total size of message received through buffer till this stream 24576 (size 1024)\n",
-      "Total size of message received through buffer till this stream 25600 (size 1024)\n",
-      "Total size of message received through buffer till this stream 26624 (size 1024)\n",
-      "Total size of message received through buffer till this stream 27648 (size 1024)\n",
-      "Total size of message received through buffer till this stream 28672 (size 1024)\n",
-      "Total size of message received through buffer till this stream 29696 (size 1024)\n",
-      "Total size of message received through buffer till this stream 30720 (size 1024)\n",
-      "Total size of message received through buffer till this stream 31744 (size 1024)\n",
-      "Total size of message received through buffer till this stream 32768 (size 1024)\n",
-      "Total size of message received through buffer till this stream 33792 (size 1024)\n",
-      "Total size of message received through buffer till this stream 34816 (size 1024)\n",
-      "Total size of message received through buffer till this stream 35840 (size 1024)\n",
-      "Total size of message received through buffer till this stream 36864 (size 1024)\n",
-      "Total size of message received through buffer till this stream 37888 (size 1024)\n",
-      "Total size of message received through buffer till this stream 38912 (size 1024)\n",
-      "Total size of message received through buffer till this stream 39936 (size 1024)\n",
-      "Total size of message received through buffer till this stream 40960 (size 1024)\n",
-      "Total size of message received through buffer till this stream 41984 (size 1024)\n",
-      "Total size of message received through buffer till this stream 43008 (size 1024)\n",
-      "Total size of message received through buffer till this stream 44032 (size 1024)\n",
-      "Total size of message received through buffer till this stream 45056 (size 1024)\n",
-      "Total size of message received through buffer till this stream 46080 (size 1024)\n",
-      "Total size of message received through buffer till this stream 47104 (size 1024)\n",
-      "Total size of message received through buffer till this stream 48128 (size 1024)\n",
-      "Total size of message received through buffer till this stream 49152 (size 1024)\n",
-      "Total size of message received through buffer till this stream 50176 (size 1024)\n",
-      "Total size of message received through buffer till this stream 51200 (size 1024)\n",
-      "Total size of message received through buffer till this stream 52224 (size 1024)\n",
-      "Total size of message received through buffer till this stream 53248 (size 1024)\n",
-      "Total size of message received through buffer till this stream 54272 (size 1024)\n",
-      "Total size of message received through buffer till this stream 55296 (size 1024)\n",
-      "Total size of message received through buffer till this stream 55922(size 626)\n",
-      "Image received\n",
       "\n",
-      "Total No of messages / packets received: 56\n"
+      "Total size of message received through buffer till this stream 1024 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 2048 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 3072 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 4096 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 5120 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 6144 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 7168 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 8192 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 9216 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 10240 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 11264 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 12288 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 13312 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 14336 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 15360 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 16384 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 17408 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 18432 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 19456 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 20480 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 21504 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 22528 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 23552 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 24576 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 25600 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 26624 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 27648 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 28672 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 29696 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 30720 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 31744 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 32768 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 33792 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 34816 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 35840 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 36864 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 37888 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 38912 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 39936 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 40960 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 41984 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 43008 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 44032 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 45056 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 46080 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 47104 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 48128 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 49152 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 50176 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 51200 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 52224 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 53248 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 54272 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 55296 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 55922 (size 626)\n",
+      "\n",
+      "Image received\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-1-494c7cd7f39e>:54: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
-      "  nparr=np.fromstring (data_total, np.uint8)\n"
+      "<ipython-input-12-7c9942e6ef32>:58: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
+      "  nparr=np.fromstring (data_total, np.uint8)\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\hanis\\anaconda3\\lib\\tkinter\\__init__.py\", line 1883, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-12-7c9942e6ef32>\", line 60, in submit_login\n",
+      "    cv2.imshow('result',img_decode)\n",
+      "cv2.error: OpenCV(4.5.3) C:\\Users\\runneradmin\\AppData\\Local\\Temp\\pip-req-build-u4kjpz2z\\opencv\\modules\\imgproc\\src\\color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n",
+      "\n"
      ]
     }
    ],
@@ -114,15 +176,19 @@
     "        print(\"\\n\"+connection.decode())\n",
     "        # Receive file header,The length of the file header\n",
     "        count=1\n",
+    "        packet_loss=0\n",
+    "        packet_lpercent=0\n",
+    "        packet_spercent=0\n",
+    "        #receive size and data\n",
+    "        recv_size=0\n",
+    "        data_total=b\"\"\n",
     "        while True : \n",
     "            fhead_size=struct.calcsize (\"l\")\n",
     "            buf, addr=UDPServerSocket.recvfrom (fhead_size)\n",
     "            if buf:\n",
     "                #returns tuple\n",
     "                data_size=struct.unpack(\"l\",buf)[0]\n",
-    "                #receive size and data\n",
-    "                recv_size=0\n",
-    "                data_total=b\"\"\n",
+    "               \n",
     "                \n",
     "                while not recv_size ==data_size:\n",
     "                    if data_size - recv_size>1024:\n",
@@ -132,16 +198,26 @@
     "                        count=count+1\n",
     "                    else:\n",
     "                        data,addr=UDPServerSocket.recvfrom(1024)\n",
-    "                        recv_size=data_size\n",
+    "                        recv_size+=len(data)\n",
     "                        data_total+=data\n",
     "                        print(\"\\nTotal size of message received through buffer till this stream \"+str(recv_size)+\" (size \"+str(len(data))+\")\")\n",
     "                        print(\"\\nImage received\")\n",
     "                        nparr=np.fromstring (data_total, np.uint8)\n",
     "                        img_decode=cv2.imdecode (nparr,cv2.IMREAD_COLOR)\n",
+    "                        cv2.imshow('result',img_decode)\n",
     "                        count=count+1\n",
     "                    \n",
     "                break\n",
+    "                \n",
+    "                \n",
+    "        if(recv_size!=data_size):\n",
+    "            packet_loss=data_size-recv_size\n",
+    "        packet_lpercent=(packet_loss//data_size)*100\n",
+    "        packet_spercent=(recv_size//data_size)*100\n",
     "        print(\"\\nTotal No of messages / packets received: \"+str(count))\n",
+    "        print(\"\\nTotal packet/data Loss if any : \"+str(packet_loss))\n",
+    "        print(\"\\nPacket/data loss % : \"+str(packet_lpercent)+\"%\")\n",
+    "        print(\"\\nPacket/data success % : \"+str(packet_spercent)+\"%\")\n",
     "          \n",
     "                    \n",
     "    else:\n",
@@ -154,6 +230,13 @@
     "tk.Button(text=\"Login\",command=submit_login).grid(row=4, column=3,pady=20)\n",
     "window.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
