push final codes

--- a/Image Stream Using Real Time Protocol -S.ipynb
+++ b/Image Stream Using Real Time Protocol -S.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -13,6 +15,8 @@
       "UDP server up and listening\n",
       "\n",
       "Client connection established\n",
+      "\n",
+      "Image Extension: png\n",
       "\n",
       "Total size of message received through buffer till this stream 1024 (size 1024)\n",
       "\n",
@@ -26,121 +30,25 @@
       "\n",
       "Total size of message received through buffer till this stream 6144 (size 1024)\n",
       "\n",
-      "Total size of message received through buffer till this stream 7168 (size 1024)\n",
+      "Total size of message received through buffer till this stream 6378 (size 234)\n",
       "\n",
-      "Total size of message received through buffer till this stream 8192 (size 1024)\n",
+      "Image received\n",
       "\n",
-      "Total size of message received through buffer till this stream 9216 (size 1024)\n",
+      "Total No of messages / packets received: 8\n",
       "\n",
-      "Total size of message received through buffer till this stream 10240 (size 1024)\n",
+      "Total packet/data Loss if any : 0\n",
       "\n",
-      "Total size of message received through buffer till this stream 11264 (size 1024)\n",
+      "Packet/data loss % : 0%\n",
       "\n",
-      "Total size of message received through buffer till this stream 12288 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 13312 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 14336 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 15360 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 16384 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 17408 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 18432 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 19456 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 20480 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 21504 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 22528 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 23552 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 24576 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 25600 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 26624 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 27648 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 28672 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 29696 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 30720 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 31744 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 32768 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 33792 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 34816 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 35840 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 36864 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 37888 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 38912 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 39936 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 40960 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 41984 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 43008 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 44032 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 45056 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 46080 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 47104 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 48128 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 49152 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 50176 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 51200 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 52224 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 53248 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 54272 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 55296 (size 1024)\n",
-      "\n",
-      "Total size of message received through buffer till this stream 55922 (size 626)\n",
-      "\n",
-      "Image received\n"
+      "Packet/data success % : 100%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-12-7c9942e6ef32>:58: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
-      "  nparr=np.fromstring (data_total, np.uint8)\n",
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\hanis\\anaconda3\\lib\\tkinter\\__init__.py\", line 1883, in __call__\n",
-      "    return self.func(*args)\n",
-      "  File \"<ipython-input-12-7c9942e6ef32>\", line 60, in submit_login\n",
-      "    cv2.imshow('result',img_decode)\n",
-      "cv2.error: OpenCV(4.5.3) C:\\Users\\runneradmin\\AppData\\Local\\Temp\\pip-req-build-u4kjpz2z\\opencv\\modules\\imgproc\\src\\color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n",
-      "\n"
+      "<ipython-input-1-e591c5a2c2fb>:62: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
+      "  nparr=np.fromstring (data_total, np.uint8)\n"
      ]
     }
    ],
@@ -174,6 +82,8 @@
     "        \n",
     "        connection,addr = UDPServerSocket.recvfrom(1024)\n",
     "        print(\"\\n\"+connection.decode())\n",
+    "        image_ext,addr= UDPServerSocket.recvfrom(1024)\n",
+    "        print(\"\\nImage Extension: \"+image_ext.decode())\n",
     "        # Receive file header,The length of the file header\n",
     "        count=1\n",
     "        packet_loss=0\n",
@@ -181,6 +91,7 @@
     "        packet_spercent=0\n",
     "        #receive size and data\n",
     "        recv_size=0\n",
+    "        data_size=0\n",
     "        data_total=b\"\"\n",
     "        while True : \n",
     "            fhead_size=struct.calcsize (\"l\")\n",
@@ -199,14 +110,19 @@
     "                    else:\n",
     "                        data,addr=UDPServerSocket.recvfrom(1024)\n",
     "                        recv_size+=len(data)\n",
-    "                        data_total+=data\n",
+    "                        count=count+1\n",
     "                        print(\"\\nTotal size of message received through buffer till this stream \"+str(recv_size)+\" (size \"+str(len(data))+\")\")\n",
     "                        print(\"\\nImage received\")\n",
-    "                        nparr=np.fromstring (data_total, np.uint8)\n",
-    "                        img_decode=cv2.imdecode (nparr,cv2.IMREAD_COLOR)\n",
-    "                        cv2.imshow('result',img_decode)\n",
-    "                        count=count+1\n",
-    "                    \n",
+    "                    data_total+=data\n",
+    "                nparr=np.fromstring (data_total, np.uint8)\n",
+    "                img_decode=cv2.imdecode (nparr,cv2.IMREAD_COLOR)\n",
+    "                #cv2.imshow('result',img_decode)\n",
+    "                if(image_ext=='jpg'):\n",
+    "                    cv2.imwrite('C:/Users/hanis/Desktop/result.jpg', img_decode)\n",
+    "                elif(image_ext=='jpeg'):\n",
+    "                    cv2.imwrite('C:/Users/hanis/Desktop/result.jpeg', img_decode)\n",
+    "                else:\n",
+    "                    cv2.imwrite('C:/Users/hanis/Desktop/result.png', img_decode)\n",
     "                break\n",
     "                \n",
     "                \n",
@@ -218,7 +134,8 @@
     "        print(\"\\nTotal packet/data Loss if any : \"+str(packet_loss))\n",
     "        print(\"\\nPacket/data loss % : \"+str(packet_lpercent)+\"%\")\n",
     "        print(\"\\nPacket/data success % : \"+str(packet_spercent)+\"%\")\n",
-    "          \n",
+    "        cv2.waitKey(0)\n",
+    "        cv2.destroyAllWindows()\n",
     "                    \n",
     "    else:\n",
     "        print(\"Error\")\n",
@@ -230,27 +147,6 @@
     "tk.Button(text=\"Login\",command=submit_login).grid(row=4, column=3,pady=20)\n",
     "window.mainloop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
