push final updates

--- a/Image Stream Using Real Time Protocol -S.ipynb
+++ b/Image Stream Using Real Time Protocol -S.ipynb
@@ -16,7 +16,7 @@
       "\n",
       "Client connection established\n",
       "\n",
-      "Image Extension: png\n",
+      "Image Extension: jpg\n",
       "\n",
       "Total size of message received through buffer till this stream 1024 (size 1024)\n",
       "\n",
@@ -30,11 +30,39 @@
       "\n",
       "Total size of message received through buffer till this stream 6144 (size 1024)\n",
       "\n",
-      "Total size of message received through buffer till this stream 6378 (size 234)\n",
+      "Total size of message received through buffer till this stream 7168 (size 1024)\n",
       "\n",
-      "Image received\n",
+      "Total size of message received through buffer till this stream 8192 (size 1024)\n",
       "\n",
-      "Total No of messages / packets received: 8\n",
+      "Total size of message received through buffer till this stream 9216 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 10240 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 11264 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 12288 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 13312 (size 1024)\n",
+      "\n",
+      "Total size of message received through buffer till this stream 13494 (size 182)\n",
+      "\n",
+      "Image received\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-c5f757ecba27>:63: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
+      "  nparr=np.fromstring (data_total, np.uint8)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total No of messages / packets received: 15\n",
       "\n",
       "Total packet/data Loss if any : 0\n",
       "\n",
@@ -42,17 +70,10 @@
       "\n",
       "Packet/data success % : 100%\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-1-e591c5a2c2fb>:62: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
-      "  nparr=np.fromstring (data_total, np.uint8)\n"
-     ]
     }
    ],
    "source": [
+    "from PIL import Image\n",
     "import socket\n",
     "import sys\n",
     "import cv2\n",
@@ -119,10 +140,20 @@
     "                #cv2.imshow('result',img_decode)\n",
     "                if(image_ext=='jpg'):\n",
     "                    cv2.imwrite('C:/Users/hanis/Desktop/result.jpg', img_decode)\n",
+    "                    # open method used to open different extension image file\n",
+    "                    #im = Image.open(r\"C:/Users/hanis/Desktop/result.jpg\") \n",
+    "                    # This method will show image in any image viewer \n",
+    "                    #im.show() \n",
     "                elif(image_ext=='jpeg'):\n",
     "                    cv2.imwrite('C:/Users/hanis/Desktop/result.jpeg', img_decode)\n",
+    "                    #im = Image.open(r\"C:/Users/hanis/Desktop/result.jpeg\") \n",
+    "                    # This method will show image in any image viewer \n",
+    "                    #im.show()\n",
     "                else:\n",
     "                    cv2.imwrite('C:/Users/hanis/Desktop/result.png', img_decode)\n",
+    "                    #im = Image.open(r\"C:/Users/hanis/Desktop/result.png\") \n",
+    "                    # This method will show image in any image viewer \n",
+    "                    #im.show()\n",
     "                break\n",
     "                \n",
     "                \n",
