fixed imwrite error

--- a/Server.ipynb
+++ b/Server.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -46,29 +46,23 @@
       "\n",
       "Total size of message received through buffer till this stream 13494 (size 182)\n",
       "\n",
-      "Image received\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-1-c5f757ecba27>:63: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
-      "  nparr=np.fromstring (data_total, np.uint8)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Image received\n",
       "\n",
-      "Total No of messages / packets received: 15\n",
+      "Total No of messages / packets received: 14\n",
       "\n",
       "Total packet/data Loss if any : 0\n",
       "\n",
       "Packet/data loss % : 0%\n",
       "\n",
       "Packet/data success % : 100%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-4-8e45648b654e>:63: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
+      "  nparr=np.fromstring (data_total, np.uint8)\n"
      ]
     }
    ],
@@ -106,7 +100,7 @@
     "        image_ext,addr= UDPServerSocket.recvfrom(1024)\n",
     "        print(\"\\nImage Extension: \"+image_ext.decode())\n",
     "        # Receive file header,The length of the file header\n",
-    "        count=1\n",
+    "        count=0\n",
     "        packet_loss=0\n",
     "        packet_lpercent=0\n",
     "        packet_spercent=0\n",
@@ -138,13 +132,13 @@
     "                nparr=np.fromstring (data_total, np.uint8)\n",
     "                img_decode=cv2.imdecode (nparr,cv2.IMREAD_COLOR)\n",
     "                #cv2.imshow('result',img_decode)\n",
-    "                if(image_ext=='jpg'):\n",
+    "                if(image_ext.decode()==\"jpg\"):\n",
     "                    cv2.imwrite('C:/Users/hanis/Desktop/result.jpg', img_decode)\n",
     "                    # open method used to open different extension image file\n",
     "                    #im = Image.open(r\"C:/Users/hanis/Desktop/result.jpg\") \n",
     "                    # This method will show image in any image viewer \n",
     "                    #im.show() \n",
-    "                elif(image_ext=='jpeg'):\n",
+    "                elif(image_ext.decode()==\"jpeg\"):\n",
     "                    cv2.imwrite('C:/Users/hanis/Desktop/result.jpeg', img_decode)\n",
     "                    #im = Image.open(r\"C:/Users/hanis/Desktop/result.jpeg\") \n",
     "                    # This method will show image in any image viewer \n",
@@ -178,6 +172,13 @@
     "tk.Button(text=\"Login\",command=submit_login).grid(row=4, column=3,pady=20)\n",
     "window.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
